--- a/Data_Collection.ipynb
+++ b/Data_Collection.ipynb
@@ -56,7 +56,13 @@
     "# read in data\n",
     "congress_url = \"https://theunitedstates.io/congress-legislators/legislators-current.csv\"\n",
     "congress_df = pd.read_csv(congress_url,\n",
-    "                          usecols=['last_name', 'first_name', 'full_name', 'party','type', 'state' ,'twitter'])\n"
+    "                          usecols=['last_name',\n",
+    "                                   'first_name',\n",
+    "                                   'full_name', \n",
+    "                                   'party',\n",
+    "                                   'type', \n",
+    "                                   'state' ,\n",
+    "                                   'twitter'])\n"
    ]
   },
   {
@@ -671,7 +677,8 @@
     "    tweets = []\t\n",
     "    try:\n",
     "    # get the most recent 200 tweets\n",
-    "        new_tweets = api.user_timeline(screen_name = handle,count=200)\n",
+    "        new_tweets = api.user_timeline(screen_name = handle,\n",
+    "                                       count=200)\n",
     "\t\n",
     "    # add new tweets one by one to end of tweets list\n",
     "        tweets.extend(new_tweets)\n",
@@ -683,7 +690,9 @@
     "        \n",
     "\t\n",
     "            # get next 200 tweets\n",
-    "            new_tweets = api.user_timeline(screen_name = handle,count=200,max_id=old)\n",
+    "            new_tweets = api.user_timeline(screen_name = handle,\n",
+    "                                           count=200,\n",
+    "                                           max_id=old)\n",
     "\t\t\n",
     "        #add current batch to the tweets list\n",
     "            tweets.extend(new_tweets)\n",
