Added EDA notebook

--- a/Data_Collection.ipynb
+++ b/Data_Collection.ipynb
@@ -54,7 +54,9 @@
    "outputs": [],
    "source": [
     "# read in data\n",
-    "congress_url = \"https://theunitedstates.io/congress-legislators/legislators-current.csv\"\n",
+    "congress_url =\\\n",
+    "\"https://theunitedstates.io/congress-legislators/legislators-current.csv\"\n",
+    "\n",
     "congress_df = pd.read_csv(congress_url,\n",
     "                          usecols=['last_name',\n",
     "                                   'first_name',\n",
@@ -262,7 +264,8 @@
     "\n",
     "congress_df.at[536, 'twitter'] = \"SenatorLoeffler\"\n",
     "\n",
-    "print(f\"Missing Twitter Handles: {len(congress_df[congress_df['twitter'].isna()])}\")\n",
+    "print(f\"Missing Twitter Handles:\\\n",
+    "{len(congress_df[congress_df['twitter'].isna()])}\")\n",
     "\n"
    ]
   },
